--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ sp-io = { git = "https://github.com/paritytech/substrate", default-features = fa
 xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.29" }
 xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.29" }
 
-pallet-inv4 = { path = "../InvArch-Pallet-Library/INV4/pallet-inv4", default-features = false }
+pallet-inv4 = { path = "../InvArch-Pallet-Library/INV4/pallet-inv4", default-features = false, optional = true }
 
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
 
@@ -21,6 +21,7 @@ log = { version = "0.4.14", default-features = false }
 
 [features]
 default = ["std"]
+for-tinkernet = ["pallet-inv4"]
 
 std = [
     "log/std",
