--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,32 +5,26 @@ edition = "2021"
 
 
 [dependencies]
-frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
-frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
-sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
-sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
-
-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.29" }
-xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.29" }
-
-pallet-inv4 = { git = "https://github.com/InvArch/InvArch-Frames", branch = "gabriel-inv4_origin", default-features = false, optional = true }
-
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
-
 log = { version = "0.4.14", default-features = false }
+
+
+xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, rev = "v0.9.29" }
+xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, rev = "v0.9.29" }
+
+frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.29" }
+sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.29" }
+sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.29" }
 
 [features]
 default = ["std"]
-for-tinkernet = ["pallet-inv4"]
 
 std = [
     "log/std",
     "codec/std",
-    "frame-support/std",
-    "frame-system/std",
     "xcm/std",
     "xcm-executor/std",
-    "pallet-inv4/std",
+    "frame-support/std",
     "sp-core/std",
-    "sp-io/std"
+    "sp-io/std",
 ]
