--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,12 @@ codec = { package = "parity-scale-codec", version = "3.0.0", default-features = 
 log = { version = "0.4.14", default-features = false }
 
 
-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, rev = "v0.9.29" }
-xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, rev = "v0.9.29" }
+xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, tag = "v0.9.30" }
+xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, tag = "v0.9.30" }
 
-frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.29" }
-sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.29" }
-sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.29" }
+frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.30" }
+sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.30" }
+sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.30" }
 
 [features]
 default = ["std"]
