--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,18 @@ frame-support = { git = "https://github.com/paritytech/substrate", default-featu
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.38" }
 sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.38" }
 
+[dev-dependencies]
+moonbeam-accountid20 = { package = "account", git = "https://github.com/PureStake/moonbeam/", branch = "master", default-features = false }
+hex = { version = "0.4.3", default-features = false }
+
+[patch.'https://github.com/purestake/substrate']
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
+sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
+sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
+sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
+frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
+
 [features]
 default = ["std"]
 
@@ -27,4 +39,5 @@ std = [
     "frame-support/std",
     "sp-core/std",
     "sp-io/std",
+    "moonbeam-accountid20/std"
 ]
